tests/date/good/rounding_option_en.catala_en
```catala

declaration scope CheckAgeIsLessThan:
  input bday content date
  input today content date
  input age content duration
  output r content boolean

scope CheckAgeIsLessThan:
  definition r equals bday + age <= today
  date round increasing

declaration scope Test:
  output r content boolean

scope Test:
  definition r equals (output of CheckAgeIsLessThan with
                      { -- bday: |2000-02-29|
                        -- today: |2018-03-01|
                        -- age: 18 year}).r
  assertion r

```



```catala-test-inline
$ catala Typecheck --check-invariants
┌─[RESULT]─
│All invariant checks passed
└─
┌─[RESULT]─
│Typechecking successful!
└─
```

```catala-test-inline
$ catala test-scope Test
┌─[RESULT]─
│r = true
└─
```
